# pvcviewer-operator

./: .gitignore  CONTRIBUTING.md  README.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.txt  requirements-unit.txt  requirements.txt  tox.ini
.github/actions/install-poetry/: action.yaml
.github/workflows/: integrate.yaml  publish.yaml  release.yaml  tiobe_scan.yaml  tiobe_scan.yml
src/: certs.py  charm.py
src/components/: pebble_component.py  service_mesh_component.py
src/prometheus_alert_rules/: KubeflowPvcviewerOperatorServices.rules
src/templates/: auth_manifests.yaml.j2  crd_manifests.yaml.j2  webhook_manifests.yaml.j2
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/integration/: charms_dependencies.py  test_charm.py  test_charm_ambient.py
tests/integration/pvcviewer_example/: pvcviewer_example.yaml
tests/unit/: test_operator.py
