# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "pvcviewer-operator"
version = "0.1.0"
description = "Charmed PVC Viewer: a Juju Operator for PCV Viewer"
readme = "README.md"
requires-python = ">=3.12"
# ----------------------------------------------------------------------------
# please, leave this list of project dependencies empty...
dependencies = []
# ... as dependency extras can instead be specified for the charm project via
# the uv plugin of Charmcraft - use the "charm" dependency group defined below
# ----------------------------------------------------------------------------

[project.optional-dependencies]
charm = [
    # Version >=0.2.0 contains the base charm code that's needed.
    "charmed-kubeflow-chisme >= 0.2.0",
    "ops",
    "serialized-data-interface",
    # from loki_k8s.v1.loki_push_api.py
    "cosl",
]
fmt = [
    "black",
    "isort",
]
lint = [
    "black",
    "codespell",
    "flake8",
    "flake8-builtins",
    "flake8-copyright",
    "isort",
    "pep8-naming",
    "pyproject-flake8",
]
unit = [
    "coverage",
    "ops",
    "pytest",
    "pytest-mock",
    "pytest-lazy-fixture",
    "pyyaml",
]
integration = [
    "aiohttp",
    # Pinning to <4.0 due to compatibility with the 3.1 controller version
    "juju<4.0",
    "lightkube",
    "pytest-operator",
    "tenacity",
    # Pin to >=0.4.0 because the reusable test infrastructure is on that version and above
    # This prevents pip-compile from trying to pin an earlier version
    "charmed-kubeflow-chisme>=0.4.0",
]

[tool.uv]
# to ensure dependencies are built from source, set this to true or override it via uv CLI:
no-binary = false

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
line_length = 99
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
