# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "pvcviewer-operator"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.charm]
optional = true
[tool.poetry.group.charm.dependencies]
charmed-kubeflow-chisme = "^0.4.11"
ops = "^2.17.1"
serialized-data-interface = "^0.7.0"
cosl = "^0.0.50"

[tool.poetry.group.update-requirements]
optional = true
[tool.poetry.group.update-requirements.dependencies]
poetry-plugin-export = "^1.9.0"

[tool.poetry.group.fmt]
optional = true
[tool.poetry.group.fmt.dependencies]
ruff = "^0.8.0"
black = "^24.10.0"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
ruff = "^0.8.0"
codespell = "^2.3.0"
pyright = "^1.1.386"
black = "^24.10.0"

[tool.poetry.group.unit]
optional = true
[tool.poetry.group.unit.dependencies]
coverage = "^7.6.1"
ops = "^2.17.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-lazy-fixture = "^0.6.3"
pyyaml = "^6.0.2"

[tool.poetry.group.integration]
optional = true
[tool.poetry.group.integration.dependencies]
aiohttp = "^3.10.11"
juju = "<4.0"
lightkube = "^0.15.6"
pytest-operator = "^0.38.0"
tenacity = "^9.0.0"
charmed-kubeflow-chisme = ">=0.4.11"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# LSPs and formatters
[tool.pyright]
include = ["src"]

[tool.black]
line-length = 99
target-version = ["py312"]

# Ensures that isort will format code that aligns with black. Used to configure
# potential editors that will have isort installed, for automatically re-ordering
# imports on save.
[tool.isort]
profile = "black"
line_length = 99

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["D107"]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
ignore-words-list = "NotIn"
